Vista y metodo Index categoria terminado con paginacion

--- a/public/css/stylos.css
+++ b/public/css/stylos.css
@@ -416,6 +416,10 @@ input[type="password"],
     border-right: 2px solid #999;
     padding: 11px 11px 11px 0px;
 }
+
+.buscar-input{
+    margin: 20px 46px;
+}
 .button{
     border: none;
     width: 100%;
@@ -570,7 +574,7 @@ p{
     margin: 20px auto;
     width: 100%;
     height: 500px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 
@@ -623,6 +627,157 @@ tr:hover td{
 
 .precio:hover{
     color: #606774;
+}
+
+/*paginacion*/
+.pagination {
+	margin:20px 0;
+}
+ 
+.pagination ul {
+	list-style:none;
+	text-align: center;
+}
+ 
+.pagination ul li {
+	display:inline-block;
+	margin-right:10px;
+}
+ 
+.pagination ul li a {
+	display:block;
+	padding:10px 20px;
+	color:#fff;
+	background:#1a2537;
+	text-decoration: none;
+}
+ 
+.pagination ul li a:hover {
+	background:#34495E;
+}
+ 
+.pagination ul li .active {
+	background:#34495E;
+	font-weight:bold;
+}
+/**/
+/* Extra small devices (phones, 600px and down) */
+@media  screen and (max-width: 588px) {
+
+    .men li{
+        padding: 6px 9px;
+        text-align: center;
+    }
+
+    .menu ul li ul{
+        margin-right: -47.5em;
+        z-index: 13
+    }
+
+    #user1{
+        visibility: hidden;
+    }
+
+    #user{
+        visibility: visible;
+        ;
+    }
+
+    .enlaceLogo{
+        visibility: hidden;
+    }
+
+    .formulario{
+        box-shadow: 1px 4px 10px 1px black;
+        margin-top: 0px;
+        width: 100%;
+    }
+
+    .customselect .select{
+        visibility: hidden;
+    }
+
+    #user1{
+        visibility: hidden;
+    }
+
+    #user {
+        visibility: visible;
+    }
+
+    .labl{
+        visibility: visible;
+    }
+    .enlaceLogo{
+        visibility: hidden;
+    }
+
+    .formulario{
+        margin: auto;   
+        border-radius: 2%;
+        box-shadow: 1px 4px 10px 1px black;
+    }
+
+    .menu ul li ul{
+        margin-right: -36em;
+    }
+
+    .content-all h4{
+        right: 0.5em;
+    }
+
+    .customselect1{
+        visibility: visible;
+    }
+
+
+}
+
+
+
+
+@media only screen and (min-width: 600px) {
+
+    .customselect .select{
+        visibility: hidden;
+    }
+
+    .formulario{
+        margin-top: 0px;
+        box-shadow: 1px 4px 10px 1px black;
+    }
+
+    .labl{
+        visibility: visible;
+    }
+
+    .formulario{
+        box-shadow: 1px 4px 10px 1px black;
+    }
+
+    .content-all h4{
+        right: 0.5em;
+    }
+
+    .menu ul li ul{
+        margin-right: -46.5em;
+    }
+
+    .formulario{
+        width: 100%;
+    }
+
+    .enlaceLogo{
+        visibility: hidden;
+    }
+
+    #user1{
+        visibility: hidden;
+    }
+
+    #user{
+        visibility: visible;
+    }
 }
 
 @media only screen and (max-width: 767px){
@@ -720,125 +875,12 @@ tr:hover td{
         width: 100%;
     }
 
+    .buscar-input{
+        margin: 0;
+    }
+
 }
 
-
-@media only screen and (min-width: 600px) {
-
-    .customselect .select{
-        visibility: hidden;
-    }
-
-    .formulario{
-        margin-top: 0px;
-        box-shadow: 1px 4px 10px 1px black;
-    }
-
-    .labl{
-        visibility: visible;
-    }
-
-    .formulario{
-        box-shadow: 1px 4px 10px 1px black;
-    }
-
-    .content-all h4{
-        right: 0.5em;
-    }
-
-    .menu ul li ul{
-        margin-right: -46.5em;
-    }
-
-    .formulario{
-        width: 100%;
-    }
-
-    .enlaceLogo{
-        visibility: hidden;
-    }
-
-    #user1{
-        visibility: hidden;
-    }
-
-    #user{
-        visibility: visible;
-    }
-}
-
-
-/* Extra small devices (phones, 600px and down) */
-@media  screen and (max-width: 588px) {
-
-    .men li{
-        padding: 6px 9px;
-        text-align: center;
-    }
-
-    .menu ul li ul{
-        margin-right: -47.5em;
-        z-index: 13
-    }
-
-    #user1{
-        visibility: hidden;
-    }
-
-    #user{
-        visibility: visible;
-        ;
-    }
-
-    .enlaceLogo{
-        visibility: hidden;
-    }
-
-    .formulario{
-        box-shadow: 1px 4px 10px 1px black;
-        margin-top: 0px;
-        width: 100%;
-    }
-
-    .customselect .select{
-        visibility: hidden;
-    }
-
-    #user1{
-        visibility: hidden;
-    }
-
-    #user {
-        visibility: visible;
-    }
-
-    .labl{
-        visibility: visible;
-    }
-    .enlaceLogo{
-        visibility: hidden;
-    }
-
-    .formulario{
-        margin: auto;   
-        border-radius: 2%;
-        box-shadow: 1px 4px 10px 1px black;
-    }
-
-    .menu ul li ul{
-        margin-right: -36em;
-    }
-
-    .content-all h4{
-        right: 0.5em;
-    }
-
-    .customselect1{
-        visibility: visible;
-    }
-
-
-}
 
 @media only screen and (min-width: 890px){
 
