--- a/public/css/formStyle.css
+++ b/public/css/formStyle.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background: url(/img/descarga3.jpg);
+    background:#1a2537;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -20,6 +20,13 @@ body{
     margin-top:10px;
     padding: 3px;
     position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    
+    border-radius: 2%;
+    box-shadow: 1px 1px 10px black;
 }
 
 h1{
@@ -28,18 +35,34 @@ h1{
     font-size: 40px;
 }
 
-input[type="text"],
-input[type="password"]{
+
+.input-contenedor input{    
     font-size: 20px;
     width: 82%;
     padding: 10px;
     border: none;
+    outline: none;
 }
 
 .input-contenedor{
     margin-bottom: 15px;
     border: 1px solid #aaa;
 }
+
+.input-contenedor2{
+    margin-top: 32px;
+    border: 1px solid #aaa;
+}
+
+.input-contenedor2 input{    
+    font-size: 20px;
+    width: 82%;
+    padding: 10px;
+    border: none;
+    
+    outline: none;
+}
+
 
 .icon{
     min-width: 50px;
@@ -56,6 +79,7 @@ input[type="password"]{
     padding: 15px 20px;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 21px;
 }
 
 .button:hover{
@@ -76,12 +100,56 @@ p{
     color: cadetblue;
 }
 
+.input-contenedor span::before{
+    content: attr(data-placeholder);
+    position: absolute;
+    top: 143px;
+    left: 18%;
+    color: #aaa;
+    transform: translateY(-50%);
+    z-index: 0;
+    font-size: 20px;
+    transition: .5s;
+}
+
+
+.input-contenedor2 span::before{
+    content: attr(data-placeholder);
+    position: absolute;
+    top: 50%;
+    left: 18%;
+    color: #aaa;
+    transform: translateY(-50%);
+    z-index: 0;
+    font-size: 20px;
+    transition: .5s;
+}
+
+
+.focus + span::before{
+    top: 100px;
+    visibility: hidden;
+    transition: .5s;
+}
+
+.focus + span::after{
+    width: 100%;
+}
+
+.focus2 + span::before{
+    top: 184px;
+    visibility: hidden;
+    transition: .5s;
+}
+
+.focus2 + span::after{
+    width: 100%;
+}
+
+
 @media(min-width:768px){
     .formulario{
         margin: auto;
-        width: 500px;
-        margin-top: 150px;
-        border-radius: 2%;
     }
 }
 
