--- a/public/css/stylos.css
+++ b/public/css/stylos.css
@@ -237,7 +237,7 @@ a{
     transition: all 500ms cubic-bezier(1,0,0,1);
     transition-timing-function: cubic-bezier(1,0,0,1);
     overflow: hidden;
-    z-index: 2;
+    z-index: 10;
 }
 .menu li{
     list-style: none;
@@ -645,6 +645,36 @@ p{
 
 /**/
 
+/*Alerta*/
+
+.alert {
+    padding: 2em;
+    background-color: #ae0b08e6;
+    color: white;
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: 3px solid #ff0500e6;
+  }
+  
+  
+  .closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+    color: black;
+  }
+/**/
+
 .link{
     text-decoration: none;
     color: #1a2537;
@@ -871,6 +901,12 @@ tr:hover td{
     
 }
 
+@media only screen and (min-width: 681px){
+    .menu ul li ul {
+        margin-right: -43em;
+    }
+}
+
 @media only screen and (max-width: 767px){
     .main-container{
         overflow: hidden;
@@ -919,12 +955,38 @@ tr:hover td{
     }
 
 
-    .categoria td:nth-of-type(2)::before{
+    .categoria td:nth-of-type(1)::before{
         content: 'Acción';
     }
 
-    .categoria td:nth-of-type(3)::before{
-        content: 'Accion';
+
+    .usuario td:before{
+        content: '';
+        font-weight: bold;
+        position: relative;
+        font-family: sans-serif;
+        top: 7%;
+        left: -100px;
+        transform: translateY(-50%);
+    }
+    .usuario td:nth-of-type(1)::before{
+        content: 'Usuario:';
+        margin-right: 24px;
+    }
+
+
+    .usuario td:nth-of-type(2)::before{
+        content: 'Email:';
+        margin-right: 41px;
+    }
+
+    .usuario td:nth-of-type(3)::before{
+        content: 'Tipo de Usuario:';
+        margin-right: -40px;
+    }
+    .usuario td:nth-of-type(4)::before{
+        content: 'Accion:';
+        margin-right: 10px;
     }
 
     .proveedor td:before{
