--- a/public/css/stylos.css
+++ b/public/css/stylos.css
@@ -270,6 +270,20 @@ article{
     z-index: 3;
 }
 
+.label{
+    top: 0;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    width: 15%;
+    max-width: 1000px;
+    top: 14px;
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+    z-index: 3;
+}
+
 
 .content-all h4{
     position: fixed;
@@ -413,6 +427,7 @@ input[type="date"]{
     outline: none;
     color: #757575;
 }
+
 input[type="number"]{
     font-size: 20px;
     width: 79%;
@@ -428,6 +443,16 @@ input[type="text"]:read-only{
     text-transform: capitalize;   
 }
 
+input[type="search"]{
+    font-size: 18px;
+    width: 200px;
+    margin: auto;
+    margin-left: 1px;
+    padding: 4px;
+    outline: none;    
+}
+
+input[type="email"],
 input[type="text"],
 input[type="password"],
 .button-primary,
@@ -522,6 +547,7 @@ p{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -529,46 +555,6 @@ p{
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .modal-header {
-    padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
-  }
-  
-  /* Modal Body */
-  .modal-body {padding: 2px 16px;}
-  
-  /* Modal Footer */
-  .modal-footer {
-    padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
   }
   
   /* Modal Content */
@@ -580,16 +566,53 @@ p{
     border: 1px solid #888;
     width: 80%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
     animation-duration: 0.4s
   }
   
   /* Add Animation */
-  @keyframes animatetop {
-    from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
   }
   
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
+  
+  .modal-body {padding: 2px 16px;}
+  
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: white;
+    color: black;
+  }
+    
 /**/
 
 /**botones*/
