--- a/public/css/stylos.css
+++ b/public/css/stylos.css
@@ -1040,6 +1040,27 @@ tr:hover td{
         width: 100%;
     }
 
+
+    .descuento td:before{
+        content: '';
+        font-weight: bold;
+        position: relative;
+        font-family: sans-serif;
+        top: 7%;
+        left: -100px;
+        transform: translateY(-50%);
+    }
+
+
+    .descuento td:nth-of-type(1)::before{
+        content: 'Descuento:';
+        margin-right: -8px;
+    }
+
+    .descuento td:nth-of-type(2)::before{
+        content: 'Acción:';
+    }
+
     .categoria td:before{
         content: 'Categoria';
         font-weight: bold;
